# object_rendering

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
assets/testing/tabletop_manipulation/: metadata.json  scoring_details.json
assets/testing/tabletop_manipulation/models/013_apple/: model.urdf
assets/testing/tabletop_manipulation/models/017_orange/: model.urdf
assets/testing/tabletop_manipulation/models/029_plate/: model.urdf
assets/testing/tabletop_manipulation/models/044_flat_screwdriver/: model.urdf
assets/testing/tabletop_manipulation/scenes/: scene_1.npz  scene_10.npz  scene_11.npz  scene_12.npz  scene_13.npz  scene_14.npz  scene_15.npz  scene_16.npz  scene_17.npz  scene_18.npz  scene_19.npz  scene_2.npz  scene_20.npz  scene_21.npz  scene_22.npz  scene_23.npz  scene_24.npz  scene_25.npz  scene_26.npz  scene_27.npz  scene_28.npz  scene_29.npz  scene_3.npz  scene_30.npz  scene_4.npz  scene_5.npz  scene_6.npz  scene_7.npz  scene_8.npz  scene_9.npz
launch/: render_pipeline.py
object_rendering/: __init__.py
object_rendering/io/: display.py  realsense_camera.py
object_rendering/nodes/: __init__.py  scene_renderer_node.py
object_rendering/render/: __init__.py  apriltag.py  camera_geometry.py  overlay.py  scene_io.py  simulation_renderer.py
test/: test_flake8.py  test_pep257.py
