<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_rendering</name>
  <version>0.0.0</version>
  <description>Real scene with simulation and rendering overlay for easy object placement</description>
  <maintainer email="yifanluo2006@gmail.com">yifan</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- Runtime Python packages installed separately on the target machine:
       pyrealsense2, pybullet, pupil-apriltags. These do not have portable
       ROS dependency keys across target platforms. -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
